--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "dash-editor",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
